# mrial

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  fade.h264
.circleci/: config.yml
.github/workflows/: rust.yaml
libs/mrial_fs/: Cargo.toml
libs/mrial_fs/src/: lib.rs  storage.rs
libs/mrial_proto/: Cargo.toml  README.md
libs/mrial_proto/src/: conn.rs  deploy.rs  input.rs  lib.rs  packet.rs  video.rs
linux/debian/: mrial-server.service  mrial.desktop  mrial.service  mrial_server.service  startup.sh
macos/: info.plist  logo.icns
macos/scripts/: build.sh  launch.sh
mrial_player/: .gitignore  Cargo.toml  README.md  build.rs
mrial_player/db/: servers.json
mrial_player/src/: main.rs
mrial_player/src/audio/: mod.rs
mrial_player/src/client/: mod.rs
mrial_player/src/input/: mod.rs
mrial_player/src/proto/: client.rs  mod.rs  packet.rs
mrial_player/src/storage/: mod.rs  servers.rs
mrial_player/src/utils/: mod.rs  state.rs
mrial_player/src/video/: convert.rs  mod.rs
mrial_player/ui/: add_server.slint  common.slint  create_server.slint  home.slint  login.slint  main.slint  video.slint
mrial_player/ui/components/: barial.slint  control_panel.slint  footer.slint  server.slint  user.slint  volume_control.slint
mrial_player/ui/screens/: create_server.slint  home.slint  hosting.slint  login.slint  start.slint  video.slint
mrial_server/: Cargo.toml  README.md
mrial_server/src/: main.rs
mrial_server/src/audio/: encoder.rs  linux.rs  macos.rs  mod.rs  windows.rs
mrial_server/src/cli/: mod.rs
mrial_server/src/conn/: app.rs  deploy.rs  mod.rs  web.rs
mrial_server/src/encoder/: yuv.rs
mrial_server/src/events/: mod.rs
mrial_server/src/video/: display.rs  mod.rs  session.rs  yuv.rs
runners/: docker-compose.yml
src/: main.rs
src/audio/: mod.rs
src/proto/: client.rs  mod.rs  packet.rs
windows/scripts/: build.sh  setup.bat
