[package]
name = "mahitm_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.25.0"
openh264 = "0.4.4"
rodio = "0.17.3"
slint = "1.3.0"
tokio = { version = "1.34.0", features = ["full"] }
