[package]
name = "mrial_player"
version = "0.1.2"
edition = "2021"
authors = ["Mahit Mehta", "Marco Ngai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = { version = "6.1.1", features = [ "build" ] }
rodio = "0.17.3"
# slint = "1.3.2"
# -slint-backend-winit = { version = "1.3.2", features = [ "renderer-femtovg", "renderer-software" ]}
slint = { git = "https://github.com/slint-ui/slint" }
i-slint-backend-winit = { git = "https://github.com/slint-ui/slint", features = [ "renderer-femtovg", "renderer-software" ]}
mrial_proto = { path = "../libs/mrial_proto" }
kanal = "0.1.0-pre8"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
winit = "0.29.4"
dirs = "5.0.1"

[build-dependencies] 
slint-build = { git = "https://github.com/slint-ui/slint" }
