[package]
name = "mrial_player"
version = "0.1.4"
edition = "2021"
authors = ["Mahit Mehta", "Marco Ngai"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.3"
slint = "1.4.0"
i-slint-backend-winit = { version = "1.4.0", features = [ "renderer-femtovg", "renderer-software" ]}
mrial_proto = { path = "../libs/mrial_proto" }
kanal = "0.1.0-pre8"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
winit = "0.29.4"
dirs = "5.0.1"
ffmpeg-next = { version = "6.1.1" }

[target."cfg(target_os = \"macos\")".dependencies] 
libyuv-sys = { path = "../libs/libyuv-sys" }

[build-dependencies] 
slint-build = "1.4.0"

[features]
build_ffmpeg = ["ffmpeg-next/build"]
