[package]
name = "mrial_player"
edition = "2021"
authors.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.3"
slint = "1.5.0"
i-slint-backend-winit = { version = "1.5.0", features = [ "renderer-femtovg", "renderer-software" ]}
mrial_proto = { path = "../libs/mrial_proto" }
kanal = "0.1.0-pre8"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
winit = "0.29.4"
dirs = "5.0.1"
ffmpeg-next = { version = "7.0.0" }
cli-clipboard = "0.4.0"
pretty_env_logger = "0.5.0"
log = "0.4.21"

[target."cfg(target_os = \"linux\")".dependencies] 
libyuv-sys = { path = "../libs/libyuv-sys" }

[target."cfg(target_os = \"macos\")".dependencies] 
libyuv-sys = { path = "../libs/libyuv-sys" }

[build-dependencies] 
slint-build = "1.5.0"

[features]
build_ffmpeg = ["ffmpeg-next/build"]
