[package]
name = "mrial_server"
version = "0.1.3"
edition = "2021"
authors = ["Mahit Mehta", "Marco Ngai"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.29", features = ["thread-pool", "executor"]} 
scrap = "0.5"
tokio = { version = "1.34.0", features = ["full"]}
mouse-rs = "0.4.2"
enigo = "0.2.0-rc2"
cfg-if = "0.1"
mrial_proto = { path = "../libs/mrial_proto" }
spin_sleep = "1.1.1"
flacenc = { version = "0.3.1" }
kanal = "0.1.0-pre8"
x264 = { path = "../libs/x264-rs" }

[target."cfg(target_os = \"linux\")".dependencies] 
libyuv-sys = { path = "../libs/libyuv-sys" }
pipewire = { path = "../libs/pipewire-rs/pipewire", features = ["v0_3_44"] }
mouse-keyboard-input = "0.4.1"
xrandr = "0.2.0"

[target."cfg(target_os = \"macos\")".dependencies] 
libyuv-sys = { path = "../libs/libyuv-sys" }