[package]
name = "mrial_server"
description = "Mrial Server"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.29", features = ["thread-pool", "executor"]} 
# scrap = "0.5"
scrap = { path = "../libs/scrap" }
tokio = { version = "1.34.0", features = ["full"]}
enigo = { version = "0.3.0", features = ["x11rb"] }
cfg-if = "0.1"
mrial_proto = { path = "../libs/mrial_proto" }
mrial_fs = { path = "../libs/mrial_fs" }
spin_sleep = "1.1.1"
flacenc = { version = "0.3.1" }
kanal = "0.1.0-pre8"
x264 = { path = "../libs/x264-rs" }
rsa = "0.9.6"
pretty_env_logger = "0.5.0"
log = "0.4.21"
rand = "0.8.5"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
webrtc = "0.12.0"
serde_json = "1.0.139"
bytes = "1.10.0"
 
[target."cfg(target_os = \"linux\")".dependencies] 
libyuv-sys = { path = "../libs/libyuv-sys" }
pipewire = { path = "../libs/pipewire-rs/pipewire", features = ["v0_3_44"] }
mouse-keyboard-input = "0.4.1"
xrandr = "0.2.0"

[target."cfg(target_os = \"macos\")".dependencies] 
libyuv-sys = { path = "../libs/libyuv-sys" }

[package.metadata.deb]
depends = [] 
assets = [
    # Mrial Server
    ["../target/release/mrial_server", "usr/bin/mrial_server", "755"],
    ["../linux/debian/startup.sh", "var/lib/mrial_server/scripts/startup.sh", "755"],
    # Mrial Player
    ["../target/release/mrial_player", "usr/bin/mrial_player", "755"],
    ["../linux/debian/mrial.desktop", "usr/share/applications/mrial.desktop", "755"],
    ["../mrial_player/assets/imgs/logo.svg", "/usr/share/icons/hicolor/scalable/apps/mrial.svg", "755"]
]
maintainer-scripts = "../linux/debian"
systemd-units = { enable = true }
