[package]
name = "mrial_proto"
edition = "2021"
authors.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
rsa = "0.9.6"
rand = "0.8.5"
chacha20poly1305 = "0.10.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"

[features]
stat = []